@@ -1,3 +1,7 @@
+2011-06-02 Christophe Jorssen <cjorssen@users.sourceforge.net>
+
+	- Some work on a lua (lpeg based) math parser.
+
 2011-05-31 Christophe Jorssen <cjorssen@users.sourceforge.net>
 
 	- Added a gnuplot call key to pgfmoduleplot.code.tex (feature
